--- a/flower.html
+++ b/flower.html
@@ -11,7 +11,7 @@
   <body class="container">
     <audio src="sound/Noche de brujas - Te amo, para siempreS.mp3" autoplay></audio>
  
-    <h1 class="titulo">Estas flores amarillas son un reflejo de la alegría que traes a mi vida y quiero dartelas. <br><br><br><br>
+    <h1 class="titulo">Estas flores amarillas son un reflejo de la alegría que traes a mi vida y quiero dartelas. <br><br><br><br><br>
       Yo se que no pudimos vernos estos dias pero quiero darte estas flores amarrillas virtuales.</h1>
 
     <div class="night"></div>
