--- a/flower.html
+++ b/flower.html
@@ -12,7 +12,7 @@
     <audio src="sound/aleks syntek & ana torroja - duele el amor [letra].mp3" autoplay></audio>
  
     <h1 class="titulo">Estas flores amarillas son un reflejo de la alegría que traes a mi vida y quiero dartelas. <br><br><br><br><br>
-      Yo se que no pudimos vernos estos dias pero quiero darte estas flores amarrillas virtuales.</h1>
+      Yo se que no pudimos vernos estos dias pero quiero darte estas flores amarrillas virtuales por que se que te mereces mucho mas.</h1>
 
     <div class="night"></div>
     <div class="flowers">
